--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,52 @@ header{
   font-size: 26px;
 }
 
+.services-component{
+  color: #424242;
+  font-family: 'DINPro-Cond';
+  padding-bottom: 100px;
+}
 
+.services-text{
+  font-size: 26px;
+}
+
+.container-services{
+  text-align: center;
+}
+
+footer{
+  color: white;
+  font-family: 'DINPro-Cond';
+  background-color: #436870;
+}
+
+.footer-redes{
+  text-align: center;
+  padding-top: 80px;
+}
+
+.img-redes{
+  height: 70px;
+}
+
+.footer-contact{
+  text-align: left;
+  padding-left: 100px;
+}
+
+.footer-contact-text{
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.footer-page-container{
+  text-align: center;
+}
+
+.footer-page{
+  font-size: 20px;
+}
 
 /* ------------------------------------ */
 
