--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,14 @@ header{
   font-family: 'DINPro-Cond'
 }
 
+.line-component-xs{
+  display: none;
+}
+
+.line-xs{
+  display: none;
+}
+
 .socio-component-rodrigo{
   padding-left: 80px;
   color: #424242;
@@ -71,6 +79,7 @@ header{
 }
 
 .title-text{
+  font-weight: bold;
   font-size: 45px;
 }
 
@@ -105,6 +114,7 @@ footer{
   color: white;
   font-family: 'DINPro-Cond';
   background-color: #436870;
+  z-index: -1;
 }
 
 .footer-redes{
@@ -134,6 +144,18 @@ footer{
   font-size: 20px;
 }
 
+.container-top {
+  position: relative;
+}
+ 
+.container-top img {
+  position: absolute;
+  width: 160px;
+  top: -82px; 
+  left: 44%;
+  z-index: 1;
+}
+
 /* ------------------------------------ */
 
 @font-face
@@ -155,10 +177,89 @@ h1
 
 /* ------------------------------------ */
 
-/*Opciones para pantallas inferiores a 767px*/
-@media screen and (max-width: 767px){
+/*Opciones para pantallas inferiores a 768px*/
+@media screen and (max-width: 768px) {
+  header{
+    padding-top: 4%;
+    padding-bottom: 4%;
+  }
+
+  .markup-header-logo{
+    width: 40%;
+  }
+
   .markup-header{
-    height: 500px;
+    height: 450px;
+  }
+
+  .container-component{
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .img-component img{
+    width: 60%;
+  }
+
+  .h1-component{
+    font-size: 50px;
+  }
+
+  .socio-component-jose{
+    padding-right: 20px;
+  }
+
+  .line-component-xs{
+    padding-left: 8%;
+    padding-right: 8%;
+    display: block;
+  }
+
+  .line-xs{
+    background-color: #436870;
+    height: 1px;
+    display: block;
+  }
+
+  .socio-component-rodrigo{
+    padding-left: 15px;
+  }
+
+  .title-text{
+    font-size: 30px;
+  }
+
+  .socio-text-rol{
+    font-size: 25px;
+  }
+
+  .socio-text-description{
+    font-size: 25px;
+  }
+
+  .socio-text-contact{
+    font-size: 25px;
+  }
+
+  .services-text{
+    font-size: 25px;
+  }
+
+  .footer-contact{
+    text-align: center;
+    padding-left: 15px;
+  }
+
+  .footer-page{
+    font-size: 20px;
+  }
+   
+  .container-top img {
+    position: absolute;
+    width: 160px;
+    top: -82px; 
+    left: 40%;
+    z-index: 1;
   }
 }
 
@@ -175,5 +276,75 @@ h1
 
   .markup-header{
     height: 250px;
+  }
+
+  .container-component{
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .img-component img{
+    width: 80%;
+  }
+
+  .h1-component{
+    font-size: 30px;
+  }
+
+  .socio-component-jose{
+    padding-right: 20px;
+  }
+
+  .line-component-xs{
+    padding-left: 8%;
+    padding-right: 8%;
+    display: block;
+  }
+
+  .line-xs{
+    background-color: #436870;
+    height: 1px;
+    display: block;
+  }
+
+  .socio-component-rodrigo{
+    padding-left: 15px;
+  }
+
+  .title-text{
+    font-size: 30px;
+  }
+
+  .socio-text-rol{
+    font-size: 25px;
+  }
+
+  .socio-text-description{
+    font-size: 25px;
+  }
+
+  .socio-text-contact{
+    font-size: 25px;
+  }
+
+  .services-text{
+    font-size: 20px;
+  }
+
+  .footer-contact{
+    text-align: center;
+    padding-left: 15px;
+  }
+
+  .footer-page{
+    font-size: 20px;
+  }
+   
+  .container-top img {
+    position: absolute;
+    width: 160px;
+    top: -82px; 
+    left: 28%;
+    z-index: 1;
   }
 }
