--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,28 @@ header{
   background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  height: 800px;
+  height: 900px;
+  padding-top: 260px;
+}
+
+.markup-header-opacity{
+  background-color:rgba(67,104,112,0.7); /* rgbA */
+  padding-top: 30px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 20px;
+}
+
+.markup-header-text{
+  font-family: 'DINPro-Cond';
+  text-align: center;
+  color: white;
+  font-size: 45px;
+  line-height: normal;
+}
+
+.jump-line{
+  display: block;
 }
 
 .container-component{
@@ -114,7 +135,7 @@ footer{
   color: white;
   font-family: 'DINPro-Cond';
   background-color: #436870;
-  z-index: -1;
+  z-index: -10;
 }
 
 .footer-redes{
@@ -153,7 +174,7 @@ footer{
   width: 160px;
   top: -82px; 
   left: 44%;
-  z-index: 1;
+  z-index: 10;
 }
 
 /* ------------------------------------ */
@@ -190,6 +211,24 @@ h1
 
   .markup-header{
     height: 450px;
+    padding-top: 70px;
+  }
+
+  .markup-header-opacity{
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 2px;
+  }
+
+  .markup-header-text{
+    font-size: 30px;
+    /*color: red;*/
+    /*font-weight: bold;*/
+  }
+
+  .jump-line{
+    display: block;
   }
 
   .container-component{
@@ -276,6 +315,23 @@ h1
 
   .markup-header{
     height: 250px;
+    padding-top: 35px;
+  }
+
+  .markup-header-opacity{
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 2px;
+  }
+
+  .markup-header-text{
+    font-size: 16px;
+    /*font-weight: bold;*/
+  }
+
+  .jump-line{
+    display: none;
   }
 
   .container-component{
